# pixigram

./: .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
client/: Dockerfile  main.py  nginx.conf
client/front/: router.py
client/static/: about.html  chat.html  index.html  login.html  registration.html
client/static/css/: about.css  chat.css  login.css  registration.css
client/static/js/: about.js  chat.js  login.js  registration.js
server/: Dockerfile
server/src/: __init__.py  config.py  database.py  main.py  models.py  redis.py
server/src/auth/: dependencies.py  exceptions.py  router.py  schemas.py  service.py  utils.py
server/src/security/: jwt.py
server/src/websocket/: ConnectionManager.py  router.py  schemas.py
